# ruinsofatlantis

./: .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GDD.md  NOTICE  README.md  Trunk.toml  deny.toml  index.html
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  nightly.yml  release.yml  wasm-release.yml
assets/models/: castle.glb  rock.glb  ruins.decompressed.gltf  sorceror.glb
assets/trees/: Birch_4GLB.glb
crates/: README.md
crates/client_core/: Cargo.toml
crates/client_runtime/: Cargo.toml
crates/collision_static/: Cargo.toml
crates/core_materials/: Cargo.toml
crates/core_units/: Cargo.toml
crates/data_runtime/: Cargo.toml
crates/dev_docs/: Cargo.toml
crates/ecs_core/: Cargo.toml
crates/ecs_core/src/: components.rs  lib.rs  parse.rs
crates/net_core/: Cargo.toml
crates/platform_winit/: Cargo.toml
crates/platform_winit/src/: cc_demo.rs  lib.rs
crates/platform_winit/tests/: builder_scene_tests.rs  interest_filter.rs
crates/render_wgpu/: Cargo.toml
crates/render_wgpu/data/zones/wizard_woods/snapshot.v1/: terrain.json
crates/render_wgpu/src/: assets.rs  lib.rs  server_ext.rs
crates/render_wgpu/src/client/: controller.rs  input.rs  mod.rs
crates/render_wgpu/src/core/: mod.rs
crates/render_wgpu/src/ecs/: mod.rs
crates/render_wgpu/src/gfx/: README.md  anim.rs  blit_noflip.wgsl  camera.rs  camera_sys.rs  castle.rs  cc_demo.rs  deathknight.rs  draw.rs  foliage.rs  frame_overlay.wgsl  fullscreen.wgsl  fx.rs  hiz.rs  material.rs  mesh.rs  mod.rs  npcs.rs  pipeline.rs  policy.rs  post_ao.wgsl  post_bloom.wgsl  present.wgsl  rocks.rs  ruins.rs  scene.rs  shader.wgsl  shader_wizard_viewer.wgsl  sky.rs  sky.wgsl  sorceress.rs  ssgi.wgsl  ssgi_fs.wgsl  terrain.rs  types.rs  ui.rs  vox_onepath.rs  zombies.rs  zone_batches.rs
crates/render_wgpu/src/gfx/renderer/: attachments.rs  controls.rs  graph.rs  init.rs  input.rs  mod.rs  passes.rs  render.rs  replication.rs  resize.rs  state.rs  update.rs  upload_adapter.rs  voxel_upload.rs
crates/render_wgpu/src/gfx/renderer/render/: render_input_tests.rs
crates/render_wgpu/src/gfx/temporal/: history.rs
crates/render_wgpu/src/server/: mod.rs
crates/render_wgpu/tests/: cpu_hash.rs  feature_flags.rs  policy_tests.rs  wizard_sync_to_replication.rs  zone_policy_tests.rs
crates/server_core/: Cargo.toml
crates/server_core/src/: actor.rs  combat.rs  destructible.rs  lib.rs  scene_build.rs  telemetry.rs  tick.rs
crates/server_core/src/destructible/: mod.rs  state.rs
crates/server_core/src/ecs/: geom.rs  mod.rs  schedule.rs  world.rs
crates/server_core/src/jobs/: mod.rs
crates/server_core/src/systems/: boss.rs  destructible.rs  mod.rs  npc.rs  projectiles.rs
crates/server_core/src/zones/: mod.rs
crates/server_core/tests/: ai_caster_respects_spellbook.rs  ai_wizard_kills_undead.rs  aoe_capsule_edge.rs  arming_delay_prevents_early_detonation.rs  boss_moves_and_casts.rs  boss_spawn_safety.rs  cast_acceptance.rs  cast_cooldown_and_mana.rs  cast_cooldown_rejection.rs  cast_queue_and_spawns.rs  cast_reject_toast.rs  cast_spawns_projectiles.rs  collider_refresh_touched_budget.rs  death_and_despawn_timer.rs  death_knight_engages.rs  despawn_timer_ticks.rs  destructible_carve_bus_cap.rs  destructible_colliders_budget.rs  destructible_delta_in_bounds.rs  destructible_distance_guard.rs  destructible_from_projectiles_segments.rs  destructible_initial_mesh.rs  destructible_integration.rs  destructible_primitives.rs  destructible_registry_broadphase.rs  dk_not_stacked_on_spawn.rs  double_ruins_instances.rs  effects_and_lifecycle.rs  explosion_surface_pick.rs  explosion_vs_actor_damage_order.rs  faction_flip_on_pc_hostile_damage.rs  faction_flip_on_pc_wizard_damage.rs  faction_vs_kind_independence.rs  factions_wizards_vs_undead_stays_hostile.rs  fireball_aoe_hits_hostiles.rs  fireball_aoe_hits_wizards.rs  fireball_aoe_radius_pad_hits_thin_target.rs  fireball_carves_ruins_e2e.rs  firebolt_hits_hostile.rs  firebolt_hits_wizard.rs  (+31 more)
crates/sim_core/: Cargo.toml
crates/ux_hud/: Cargo.toml
crates/voxel_mesh/: Cargo.toml
crates/voxel_proxy/: Cargo.toml
crates/worldsmithing/: Cargo.toml
data/classes/: cleric.json  fighter.json  monk.json  ranger.json  rogue.json  wizard.json
data/config/: destructible.toml  nivita.toml  pc_animations.toml  projectiles.toml  sorceress.toml  telemetry.toml
data/monsters/: boss_aboleth.json  zombie.json
data/scenarios/: example.yaml
data/spells/: bless.json  burning_hands.json  fire_bolt.json  fireball.json  grease.json  heroism.json  magic_missile.json  shield.json  thunderwave.json
docs/: ECS.md  ECS_ARCHITECTURE_GUIDE.md  README.md  combat_sim.md  combat_sim_ecs.md  faction.md  fevir-2025.md  fire_bolt.md  lighting.md  telemetry.md  wasm-deployment.md  web-wasm-blackout-postmortem.md  wizard_viewer.md
docs/architecture/: ECS_ARCHITECTURE_GUIDE.md
docs/audits/: README.md
docs/delegations/: 20251006_124630_ensure-srd-pdf-is-fully-converted-to-markdown.md
docs/dev/: docs.md
docs/gdd/: 01-philosophy.md  06-pvp.md  07-combat-simulator.md  README.md
docs/graphics/: bevy_gltf.md  foliage-texturing.md  gltf-animations.md  (+1 more)
scripts/: deploy_wasm_to_site.sh  extract_srd_sections.py  import_tree_asset.sh  setup-git-hooks.sh  split_monsters_animals.py
shared/assets/: Cargo.toml
shared/assets/src/: draco.rs  fbx.rs  gltf.rs  lib.rs  obj.rs  skinning.rs  types.rs  util.rs
src/: README.md  lib.rs  main.rs  platform_winit.rs  render_wgpu.rs
tests/: core_data.rs  core_rules.rs  e2e_authoritative.rs  ecs.rs  golden_packs.rs  sim_fsm.rs  sim_state.rs  sim_systems.rs
tools/model-viewer/: Cargo.toml
tools/model-viewer/src/: main.rs  shader_basic.wgsl  shader_skinned.wgsl
tools/zone-bake/: Cargo.toml
tools/zone-bake/src/: lib.rs  main.rs
tools/zone-bake/tests/: bake_tests.rs
tools/zone-bake/tests/fixtures/zones/cc_demo/: manifest.json
tools/zone-bake/tests/fixtures/zones/forest_grove/: manifest.json
xtask/: Cargo.toml
(+1108 files in other folders)
