[package]
name = "ruinsofatlantis"
version = "0.1.0"
edition = "2024"
default-run = "ruinsofatlantis"

[workspace]
members = [
    ".",                # root crate
    "shared/assets",    # shared library for model/assets
    "tools/model-viewer", # standalone model viewer
    "crates/data_runtime", # data schemas + loaders
    "crates/render_wgpu",  # renderer crate (re-export for now)
    "crates/sim_core",     # sim rules/combat facade (re-export for now)
    "crates/platform_winit", # winit platform facade (re-export for now)
    "crates/ux_hud"        # HUD logic (stub)
]
resolver = "2"

[features]
default = ["gfx-sky"]
gfx-sky = []

[dependencies]
ab_glyph = "0.2.25"
anyhow = "1.0.100"
base64 = "0.22.1"
bevy = "0.14"
bytemuck = { version = "1.23.2", features = ["derive"] }
dcv-color-primitives = "0.7.0"
draco = "0.1.2"
draco_decoder = "0.0.10"
env_logger = "0.11.8"
glam = "0.30.8"
gltf = { version = "1.4.1", features = ["import", "extensions"] }
image = "0.25"
log = "0.4.28"
pollster = "0.4.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
wgpu = "26.0.1"
which = "8.0.0"
winit = "0.30.12"
ra-assets = { version = "0.1.0", path = "shared/assets" }
hw-skymodel = "0.1.1"
data_runtime = { version = "0.1.0", path = "crates/data_runtime" }
sim_core = { version = "0.1.0", path = "crates/sim_core" }
ux_hud = { version = "0.1.0", path = "crates/ux_hud" }

[patch.crates-io]
# Use a patched local copy of draco_decoder to avoid passing
# macOS-only flags on non-macOS targets.
draco_decoder = { path = "vendor/draco_decoder-0.0.10" }
