[package]
name = "render_wgpu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vox_onepath"
path = "src/bin/vox_onepath.rs"
required-features = ["vox_onepath_demo"]

[features]
default = ["legacy_client_ai", "legacy_client_combat", "legacy_client_carve"]
# Enables client-side voxel carve/collider/meshing/debris (legacy path)
legacy_client_carve = ["dep:server_core"]
# Enables client-side AI updates (legacy/demo only)
legacy_client_ai = ["dep:server_core"]
# Enables client-side combat/collision against NPCs (legacy/demo only)
legacy_client_combat = ["dep:server_core"]
# Compiles the one-path voxel demo module and related helpers
vox_onepath_demo = ["dep:server_core"]
# Opt-in verbose logging for destructible workflows
destruct_debug = []

[dependencies]
ab_glyph = "0.2.31"
anyhow = "1.0.100"
bytemuck = { version = "1.23.2", features = ["derive"] }
glam = "0.30.8"
hw-skymodel = "0.1.1"
log = "0.4.28"
wgpu = "26.0.1"
winit = "0.30.12"
ra-assets = { version = "0.1.0", path = "../../shared/assets" }
data_runtime = { version = "0.1.0", path = "../data_runtime" }
ux_hud = { version = "0.1.0", path = "../ux_hud" }
ecs_core = { version = "0.1.0", path = "../ecs_core" }
client_core = { version = "0.1.0", path = "../client_core" }
server_core = { version = "0.1.0", path = "../server_core", optional = true }
rand = "0.9.2"
rand_chacha = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
gltf = "1.4.1"
pollster = "0.4.0"
collision_static = { version = "0.1.0", path = "../collision_static" }
client_runtime = { version = "0.1.0", path = "../client_runtime" }
web-time = "1.1.0"
voxel_proxy = { version = "0.1.0", path = "../voxel_proxy" }
voxel_mesh = { version = "0.1.0", path = "../voxel_mesh" }
core_units = { version = "0.1.0", path = "../core_units" }
core_materials = { version = "0.1.0", path = "../core_materials" }
web-sys = { version = "0.3.70", features = ["Window", "Location"] }
png = "0.17"
half = "2"
env_logger = "0.11.5"
net_core = { version = "0.1.0", path = "../net_core" }

[dev-dependencies]
sha2 = "0.10.9"
