[package]
name = "server_core"
version = "0.1.0"
edition = "2024"

[features]
# Mirror render_wgpu's destructible logging gate
destruct_debug = []

[dependencies]
core_materials = { version = "0.1.0", path = "../core_materials" }
core_units = { version = "0.1.0", path = "../core_units" }
glam = "0.30"
rand = "0.9.2"
voxel_proxy = { version = "0.1.0", path = "../voxel_proxy" }
