[package]
name = "ra-assets"
version = "0.1.0"
edition = "2024"

[lib]
name = "ra_assets"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytemuck = { version = "1.13", features = ["derive"] }
glam = "0.30"
gltf = { version = "1.4.1", features = ["import", "extensions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
draco_decoder = "0.0.10"
pollster = "0.4"
fbxcel = { version = "0.9.0", optional = true }
fbxcel-dom = { version = "0.0.10", optional = true }

[features]
fbxcel = ["dep:fbxcel"]
fbxcel-dom = ["dep:fbxcel-dom"]
