[package]
name = "model-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
glam = "0.30"
log = "0.4"
pollster = "0.4"
wgpu = "26.0.1"
winit = "0.30.12"
ra-assets = { version = "0.1.0", path = "../../shared/assets" }
which = "8.0.0"
png = "0.17"
